updated logout route to login

--- a/frontend/pages/dashboard.html
+++ b/frontend/pages/dashboard.html
@@ -12,7 +12,7 @@
         <p>You are now logged in.</p>
 
         <div class="actions">
-            <a href="/logout">Logout</a>
+            <a href="{{ url_for('login') }}">Logout</a>
         </div>
     </div>
 </body>
