updated CSS, added table-wrapper to list-users table

--- a/frontend/pages/list-users.html
+++ b/frontend/pages/list-users.html
@@ -11,6 +11,7 @@
 		<p class="banner">This site is for cybersecurity testing purposes. Vulnerable mode is <strong>{{ mode }}</strong></p>
 		<h1>Capstone Bank - Admin Portal</h1>
 		<h2>{{ admin.name }}'s Session: List All Users</h2>
+		<div class="table-wrapper">
 		<table>
 			<thead>
 				<tr>
@@ -49,6 +50,7 @@
 				{% endfor %}
 			</tbody>
 		</table>
+		</div>
 		<br><br>
 		<a href="/admin">Back to Admin Home</a>
 	</div>
