--- a/frontend/pages/transfer.html
+++ b/frontend/pages/transfer.html
@@ -12,27 +12,36 @@
 
     <h1>Capstone Bank - Transfer Funds</h1>
     <h2>{{ user.name }}'s Session: Make a Transfer</h2>
+		{% if user.secure %}
+			<form method="POST" action="/transfer">
+				{{ transfer_form.hidden_tag() }}
+				{{ transfer_form.from_account.label }}{{ transfer_form.from_account() }}
+				{{ transfer_form.to_account.label }}{{ transfer_form.to_account() }}
+				{{ transfer_form.amount.label }}{{ transfer_form.amount() }}
+				{{ transfer_form.submit() }}
+			</form>
+		{% else %}
+			<form method="POST" action="/transfer">
+      	<label for="from_account">Transfer funds from Account:</label>
+      	<select name="from_account" id="from_account">
+        	<option value="checking">Checking</option>
+        	<option value="savings">Savings</option>
+      	</select>
 
-    <form method="POST" action="/transfer">
-      <label for="fromAccount">Transfer funds from Account:</label>
-      <select name="from_account" id="fromAccount">
-        <option value="checking">Checking</option>
-        <option value="savings">Savings</option>
-      </select>
+      	<label for="to_account">Move funds to Account:</label>
+      	<select name="to_account" id="to_account">
+        	<option value="checking">Checking</option>
+        	<option value="savings">Savings</option>
+      	</select>
 
-      <label for="toAccount">Move funds to Account:</label>
-      <select name="to_account" id="toAccount">
-        <option value="checking">Checking</option>
-        <option value="savings">Savings</option>
-      </select>
+				<label for="amount_">Amount to transfer:</label>
+				<input type="text" name="amount" id="amount_">
 
-      <label for="amount">Amount to transfer:</label>
-      <input type="text" name="amount" id="amount">
+      	<button type="submit">Submit</button>
+    	</form>
+		{% endif %}
 
-      <button type="submit">Submit</button>
-    </form>
-
-    {% if message %}
+		{% if message %}
       <p class="message">{{ message }}</p>
     {% endif %}
 
