--- a/frontend/pages/transfer.html
+++ b/frontend/pages/transfer.html
@@ -12,15 +12,21 @@
 
     <h1>Capstone Bank - Transfer Funds</h1>
     <h2>{{ user.name }}'s Session: Make a Transfer</h2>
+
 		{% if user.secure %}
+			<!-- secure mode (uses FlaskForm) -->
+			<!-- code adapted from:
+				https://blog.miguelgrinberg.com/post/the-flask-mega-tutorial-part-iii-web-forms -->
 			<form method="POST" action="/transfer">
-				{{ transfer_form.hidden_tag() }}
+				{{ transfer_form.hidden_tag() }}	<!-- embed CSRF token in form -->
 				{{ transfer_form.from_account.label }}{{ transfer_form.from_account() }}
 				{{ transfer_form.to_account.label }}{{ transfer_form.to_account() }}
 				{{ transfer_form.amount.label }}{{ transfer_form.amount() }}
 				{{ transfer_form.submit() }}
 			</form>
+
 		{% else %}
+			<!-- vulnerable mode (uses HTML form)-->
 			<form method="POST" action="/transfer">
       	<label for="from_account">Transfer funds from Account:</label>
       	<select name="from_account" id="from_account">
