--- a/attack-demos/csrf/promotion.html
+++ b/attack-demos/csrf/promotion.html
@@ -1,4 +1,4 @@
-<!-- malicious page where the CSRF Attack executes once the browser visits the page -->
+<!-- malicious page where the CSRF Attack executes from once the browser visits the page -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
