Add navigation link to return to dashboard from import page

--- a/frontend/pages/import-data.html
+++ b/frontend/pages/import-data.html
@@ -21,6 +21,10 @@
     {% if message %}
       <p class="message">{{ message }}</p>
     {% endif %}
+
+    <br><br>
+    <a href="{{ url_for('dashboard') }}">Back to Dashboard</a>
+    
   </div>
 </body>
 </html>
