Implement user import/export functionality for admins

--- a/frontend/pages/admin-dashboard.html
+++ b/frontend/pages/admin-dashboard.html
@@ -19,6 +19,8 @@
 				<li><a href="/add-user">Add a User</a></li>
 				<li><a href="/edit-user">Edit a User</a></li>
 				<li><a href="/delete-user">Delete a User</a></li>
+				<li><a href="/import-user">Import a User</a></li>
+				<li><a href="/export-user">Export a User</a></li>
 				<li><a href="/logout">Logout</a></li>
 			</ul>
 		</nav>
